# sound_puddle_detector

./: .gitignore  CMakeLists.txt  README.md  csv2wav.py  example_calsa_mic_recording.c  micread_main.cpp  micread_thread.cpp  micread_thread.hpp  pyaudio_example.py  test_mic_rec.py  test_simple_puddle_classifier.py  train_simple_puddle_classifier.py  train_simple_puddle_classifier_on_mydata.py
assets/: asoundrc
examples/: example_calsa2_mic_recording.c  example_calsa_mic_recording.c  example_sine.cpp
